# stasher-distreboot

./: .gitignore  Makefile.am  README.stasher  configure.ac  connect.tst.C  debuild.in  distreboot.C  distreboot.H  distreboot.msgs.xml  distreboot.opts.xml  reboot.tst.C  tst.C  tst.H  tst.opts.xml
distreboot/: .gitignore  Makefile.am  configure.ac  connect.tst.C  distreboot.C  distreboot.H  distreboot.msgs.xml  distreboot.opts.xml  main.C  reboot.tst.C  tst.C  tst.H  tst.opts.xml
distreboot/docbook/: book.xml  docbook.xsl  install.xml  intro.xml
distreboot/packaging/fedora/: .gitignore  stasher-distreboot.service.in  stasher-distreboot.spec.in
distreboot/packaging/freebsd9/databases/stasher-distreboot/: Makefile  pkg-descr  pkg-plist
distreboot/packaging/freebsd9/databases/stasher-distreboot/files/: distreboot.in
docbook/: book.css  book.xml  distreboot.xml  install.xml
packaging/debian/: changelog  control  postinst  rules  stasher-distreboot.lintian-overrides  stasher-distreboot.service
packaging/fedora/: stasher-distreboot.spec.in
packaging/freebsd9/databases/stasher-distreboot/: Makefile  pkg-deinstall  pkg-plist
